Latest working changes on server and sample frontend. Also includes a sample nginx configuration to avoid CORS issues.

--- a/workboard-frontend/test.html
+++ b/workboard-frontend/test.html
@@ -12,7 +12,7 @@
         payload.content = $('#message').val();
 
         $.post({
-          url : 'http://localhost:9621/',
+          url : 'http://localhost/api/',
           data: JSON.stringify(payload),
           contentType: 'application/json',
           success: function(serialId) {
@@ -20,6 +20,24 @@
           }
         });
       }
+
+      var lastSID = 0;
+      function update()
+      {
+        console.log('Waiting for news...');
+
+        $.get({
+          url : 'http://localhost/api/' + lastSID,
+          contentType: 'application/json',
+          success: function(message) {
+            $('#messages').append('<div>' + message.content + '<br>(By ' + message.user + ')</div>');
+            lastSID++;
+            update();
+          }
+        });
+      }
+
+      update();
     </script>
   </head>
   <body>
