Improvements on the CSS and the position of the task status indicator.

--- a/workboard-frontend/index.html
+++ b/workboard-frontend/index.html
@@ -9,25 +9,26 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
   <script src="./workboard-semantic.js"></script>
   <style>
-  input.transparent,
-  textarea.transparent
+  .task.card .header
   {
-    border-color: transparent!important;
-    background-color: transparent!important;
-    padding: 0!important;
-    box-shadow: none!important;
+    display: flex !important;
   }
-
-  table.detail
+  
+  .task.card .header > input
   {
-    color: #777;
+    flex-grow: 1; 
   }
-
-  table.detail td:first-child
+  
+  textarea
   {
-    white-space: nowrap;
-    width: 1%;
-    padding-right: 2rem;
+    width: 100%;
+  }
+  
+  .task.card input,
+  .task.card textarea
+  {
+    border : none;
+    outline: none;
   }
 
   .overflow
@@ -38,21 +39,6 @@
   .punctual
   {
     color: #16ab39;
-  }
-
-  .right-floated
-  {
-    float: right;
-  }
-
-  .as-is
-  {
-    white-space: pre-line;
-  }
-
-  input.right.aligned
-  {
-    text-align: right;
   }
 
   .ui.message .list:not(.ui) li:before
@@ -71,25 +57,25 @@
     </aside>
     <section class="eleven wide column">
       <div class="ui cards">
-        <div class="red card">
+        <div class="red task card">
           <div class="content">
-            <div class="ui task right floated dropdown item">
-              <i class="ui icon"></i>
-              <div class="menu">
-                <script>
-                  for (var status in statuses)
-                    document.write('<div class="item" data-value="' + status + '"><i class="' + statuses[status].icon + ' icon"></i>' + statuses[status].label + '</div>');
-                </script>
+            <div class="header">
+              <input placeholder="(Title)">
+              <div class="ui task status dropdown item">
+                <i class="ui icon"></i>
+                <div class="menu">
+                  <script>
+                    for (var status in statuses)
+                      document.write('<div class="item" data-value="' + status + '"><i class="' + statuses[status].icon + ' icon"></i>' + statuses[status].label + '</div>');
+                  </script>
+                </div>
               </div>
             </div>
-            <div class="header">
-              <input class="transparent" placeholder="(Title)">
-            </div>
             <div class="meta">
-              <input class="transparent" placeholder="(Project)">
+              <input placeholder="(Project)">
             </div>
             <div class="description">
-              <textarea placeholder="(Description)" class="transparent" rows="1" style="width: 100%; resize: none;"></textarea>
+              <textarea placeholder="(Description)" rows="1" style="resize: none;"></textarea>
             </div>
           </div>
           <div class="extra content">
@@ -100,63 +86,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="ui styled fluid accordion" id="tasks">
-        <div class="title">
-          <i class="add icon"></i>
-          New activity
-        </div>
-        <div class="content">
-          <form class="ui form">
-            <div class="two fields">
-              <div class="field">
-                <label for="activityTitle">Title</label>
-                <input name="title" id="activityTitle">
-              </div>
-              <div class="field">
-                <label for="activityProject">Project</label>
-                <input name="project" id="activityProject" placeholder="(Optional)">
-              </div>
-            </div>
-            <div class="doubling fields">
-              <div class="eight wide field">
-                <label for="activityStatus">Status</label>
-                <div class="ui fluid selection dropdown">
-                  <input type="hidden" name="status" id="activityStatus">
-                  <i class="dropdown icon"></i>
-                  <div class="default text"></div>
-                  <div class="menu">
-                    <script>
-                    for (var status in statuses)
-                    document.write('<div class="item" data-value="' + status + '"><i class="' + statuses[status].icon + ' icon"></i>' + statuses[status].label + '</div>');
-                    </script>
-                  </div>
-                </div>
-              </div>
-              <div class="four wide field">
-                <label for="activitySpentTime">Spent time</label>
-                <div class="ui right labeled input">
-                  <input name="spentTime" id="activitySpentTime" class="right aligned">
-                  <div class="ui label">hrs</div>
-                </div>
-              </div>
-              <div class="four wide field">
-                <label for="activityEstimatedTime">Estimated time</label>
-                <div class="ui right labeled input">
-                  <input name="estimatedTime" id="activityEstimatedTime" class="right aligned">
-                  <div class="ui label">hrs</div>
-                </div>
-              </div>
-            </div>
-            <div class="field">
-              <label for="activityDescription">Description</label>
-              <textarea name="description" id="activityDescription" rows="2"></textarea>
-            </div>
-            <div class="ui error message"></div>
-            <button class="ui primary button" type="submit">Add new activity</button>
-          </form>
-        </div>
-      </div> -->
     </section>
   </div>
 </body>
