Implements update of status and description of tasks.

--- a/workboard-frontend/index.html
+++ b/workboard-frontend/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
   <link rel="stylesheet" href="workboard-semantic.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.js"></script>
   <script src="./workboard-semantic.js"></script>
 </head>
 <body>
@@ -25,7 +25,7 @@
             <div class="header">
               <input name="title" placeholder="(Title)" oninput="tell(event);">
               <div class="ui task status dropdown item">
-                <i class="ui wait icon"></i>
+                <i class="ui icon"></i>
                 <div class="menu">
                   <script>
                     for (var status in statuses)
