Creates tasks with working description auto-height and status dropdowns. Also eliminates user list section.

--- a/workboard-frontend/index.html
+++ b/workboard-frontend/index.html
@@ -15,10 +15,7 @@
     <span class="item">Workboard</span>
   </nav>
   <div class="ui centered stackable grid" style="padding-top: 5em;">
-    <aside class="three wide column">
-      <div class="ui blue link vertical fluid menu" id="user-list"></div>
-    </aside>
-    <section class="twelve wide column">
+    <section class="fifteen wide column">
       <div class="ui cards"></div>
     </section>
   </div>
